--- a/02-scroll-tigger.html
+++ b/02-scroll-tigger.html
@@ -17,9 +17,10 @@
             <h1>Animación con scroll</h1>
         </section>
 
+
         <section class="contenedor__img">
-            <img class="img_ejm1 ejem_1" src="src/bear-gc933990c6_1920.png" alt="img">
-            <img class="img_ejm2 ejem_2" src="src/bear-gc933990c6_1920.png" alt="img">
+            <img class="img_ejm1 ejem_1" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/logo-man.svg" alt="img">
+            <img class="img_ejm2 ejem_2" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/logo-man.svg" alt="img">
         </section>
 
         <section class="contenedor__titulo--secundario">
